[package]
name = "pdb_wrapper"
version = "0.2.2"
authors = ["jan"]
edition = "2018"
build = "build.rs"
description = "Rust library to create fake PDBs. Very in-dev, API is likely to break a lot (not including the frequent LLVM API breakages...)"
homepage = "https://github.com/not-wlan/pdb_wrapper"
repository = "https://github.com/not-wlan/pdb_wrapper"
license = "Unlicense"

[build-dependencies]
bindgen = "0.72.1"
cmake = "0.1.58"
which = "8.0.2"

[dependencies]
snafu = "0.9.0"

[dev-dependencies]
pdb = "0.6"

[features]
default = ["llvm_22"]
llvm_10 = []
llvm_22 = []
